--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.0.1",
     "react-icons": "^4.10.1",
     "react-parallax-tilt": "^1.7.156",
+    "react-pdf": "^7.3.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.11.0",
